# simplex

./: LICENSE  README.md  main.py  pyproject.toml  run.bat
simplex/: __init__.py  base.py  bnb.py  branch-and-bound.py  dual.py  gomory.py
src/: alg.py  main.py
src/simplex/: __init__.py  base.py
tests/: test_bnb.py  test_dual.py  test_gomory.py  test_simplex.py
